// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Confirm > can set active text 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo?
[36m│[39m  [32m●[39m DO IT [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo?
[90m│[39m  [2mDO IT[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`Confirm > can set inactive text 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo?
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mDONT DO IT[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo?
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`Confirm > can set message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo?
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo?
[90m│[39m  [2mYes[22m",
  "
",
  "<cursor.show>",
]
`;
